[package]
name = "tzfile"
version = "0.1.0"
authors = ["kennytm <kennytm@gmail.com>"]
edition = "2018"
description = "chrono::TimeZone implementation using system tz database"
license = "MIT"
repository = "https://github.com/kennytm/tzfile"

[dependencies]
byteorder = "1.3"
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
lazy_static = "1.1"
criterion = "0.2"
chrono-tz = "0.5"
chrono = "0.4"

[[bench]]
name = "bench_convert_vs_chrono_tz"
harness = false
